<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.primal.runs.utils.BaseCustomDialog.Listener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_radius_free"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_25sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeading"
            style="@style/TextView.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/go_pro_amp_skip_ads"
            android:textAllCaps="true"
            android:textSize="@dimen/_22ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/des"
            style="@style/TextView.Regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/des_pro_dialog"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGoPro"
            style="@style/TextView.FuturaBold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/corner_radius_10"
            android:gravity="center"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:text="@string/go_pro"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toStartOf="@+id/tvMayBeLater"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/des" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMayBeLater"
            style="@style/TextView.FuturaBold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/corner_radius_maybe"
            android:gravity="center"
            android:text="@string/maybe_later"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvGoPro"
            app:layout_constraintTop_toBottomOf="@+id/des" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>