<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.primal.runs.ui.auth.gps.GpsEnableVM" />
    </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/man_gps"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeading"
                style="@style/TextView.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enable_gps_for_accurate_tracking"
                android:textAllCaps="true"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubHeading"
                style="@style/TextView.Regular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:alpha="0.8"
                android:gravity="center"
                android:text="@string/des_gps"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSureThing"
                style="@style/TextView.FuturaBold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/corner_radius_10"
                android:gravity="center"
                android:onClick="@{v ->vm.onClick(v)}"
                android:text="@string/sure_thing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSubHeading" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotNow"
                style="@style/TextView.FuturaBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/not_now"
                android:textAllCaps="true"
                android:onClick="@{v ->vm.onClick(v)}"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tvSureThing"
                app:layout_constraintStart_toStartOf="@+id/tvSureThing"
                app:layout_constraintTop_toBottomOf="@+id/tvSureThing" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>