<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.primal.runs.ui.auth.login.LoginVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.auth.policy.PolicyFragment">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:onClick="@{v ->vm.onClick(v)}"
            android:src="@drawable/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTerms"
            style="@style/TextView.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="start"
            android:scrollbars="vertical"
            android:text="@string/terms_and_conditions"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCancel" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView.Regular"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:text="@string/term"
            app:layout_constraintBottom_toTopOf="@+id/tvGotIt"
            app:layout_constraintEnd_toEndOf="parent"
            android:alpha="0.9"
            android:textSize="@dimen/_11ssp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTerms" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGotIt"
            style="@style/TextView.FuturaBold"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginHorizontal="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/corner_radius_10"
            android:gravity="center"
            android:onClick="@{v ->vm.onClick(v)}"
            android:text="@string/got_it"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>