<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.primal.runs.ui.dashboard.settings.SettingsVM" />

        <variable
            name="bean"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_home"
        tools:context=".ui.dashboard.settings.SettingsFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_18sdp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivUserImage"

                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:onClick="@{v ->vm.onClick(v)}"
                android:padding="@dimen/_2sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_dummy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                app:strokeWidth="2dp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHeading"
                style="@style/TextView.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/settings"
                android:textAllCaps="true"
                android:textSize="@dimen/_22ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUserImage" />


            <View
                android:id="@+id/ivView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/app_gray"
                app:layout_constraintTop_toBottomOf="@+id/tvHeading" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGender"
                style="@style/TextView.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/gender"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp"
                app:layout_constraintGuide_percent="0.45" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMale"
                style="@style/TextView.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/corner_radius_setting"
                android:gravity="center"
                android:onClick="@{v->vm.onClick(v)}"
                android:paddingVertical="@dimen/_4sdp"
                android:text="@string/male"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tvGender"
                app:layout_constraintEnd_toStartOf="@+id/tvFemale"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/tvGender" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFemale"
                style="@style/TextView.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center"
                android:onClick="@{v->vm.onClick(v)}"
                android:paddingVertical="@dimen/_3sdp"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tvMale"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMale"
                app:layout_constraintTop_toTopOf="@+id/tvMale" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMeasure"
                style="@style/TextView.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/unit_of_measure"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGender" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/corner_radius_setting"
                android:backgroundTint="@color/black"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/tvMeasure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvMale"
                app:layout_constraintTop_toTopOf="@+id/tvMeasure">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMiles"
                    style="@style/TextView.Regular"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:gravity="center"
                    android:onClick="@{v->vm.onClick(v)}"
                    android:text="Miles"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvKm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvKm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:background="@drawable/corner_radius_setting"
                    android:gravity="center"
                    android:onClick="@{v->vm.onClick(v)}"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:singleLine="true"
                    android:text="Kilometers"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvMiles"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVoiceOver"
                style="@style/TextView.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/voice_over"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMeasure" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/editSeekbarGoalAmount"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="wrap_content"
                android:max="1"
                android:maxHeight="@dimen/_5sdp"
                android:minHeight="@dimen/_5sdp"
                android:progress="0"
                android:progressDrawable="@drawable/seekbar_setting_progress"
                android:splitTrack="false"
                android:thumb="@drawable/thumb_new_voice"
                app:layout_constraintBottom_toBottomOf="@+id/tvVoiceOver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvVoiceOver" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVoiceEffect"
                style="@style/TextView.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/audio_effects"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVoiceOver" />


            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekbarAudioEffect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="100"
                android:maxHeight="@dimen/_5sdp"
                android:minHeight="@dimen/_5sdp"
                android:progress="80"
                android:progressDrawable="@drawable/seekbar_setting_progress"
                android:splitTrack="false"
                android:thumb="@drawable/thumb_new_voice"
                app:layout_constraintBottom_toBottomOf="@+id/tvVoiceEffect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/tvVoiceEffect" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPolicy"
                style="@style/TextView.Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/terms_of_service_and_privacy_policy"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVoiceEffect" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/viewPolicy"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{v ->vm.onClick(v)}"
                android:text="@string/view"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintBottom_toBottomOf="@+id/tvPolicy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvPolicy" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>